--- a/portfolio.html
+++ b/portfolio.html
@@ -19,7 +19,14 @@
   </head>
   <body>
     <nav
-      class="navbar navbar-expand-lg navbar-light bg-warning sticky-top border-bottom border-gray shadow-sm fw-bold"
+      class="
+        navbar navbar-expand-lg navbar-light
+        bg-warning
+        sticky-top
+        border-bottom border-gray
+        shadow-sm
+        fw-bold
+      "
     >
       <div class="container">
         <a class="navbar-brand" href="./"
@@ -76,14 +83,217 @@
     <div class="container mt-4">
       <h1 class="display-3">Portfolio des étudiant-es</h1>
       <p class="lead">
-        Les étudiant-es qui le souhaitent peuvent demander que leurs productions
-        soient publiées à cet endroit.
+        Cette page propose les projets des étudiant-es qui ont accepté de rendre
+        public leurs travaux. Les consignes pour les travaux sont disponibles
+        dans la page <a href="./livrables.html">des livrables</a>.
       </p>
 
-      <div class="text-center display-4">
-        <i class="fas fa-hard-hat fa fa-5x"></i><br />
-        En construction
-      </div>
+      <!-- Rendu final -->
+      <section>
+        <h3>Conception d'une maquette interactive avec test utilisateur</h3>
+        <p>
+          Le projet principal du cours consiste dans un travail en binôme divisé
+          en trois étapes : (i) conception d'une première version d'une maquette
+          interactive suite à la récolte d'information pendant le cours ERGO I
+          (e.g., analyse des besoins, trie de cartes, ...) ; (2) planification,
+          passation et analyse de résultat d'un test utilisateur ; et (3)
+          conception d'une deuxième version de la maquette interactive suite aux
+          retours du test utilisateur.
+        </p>
+
+        <div class="row row row-cols-3 text-center">
+          <!-- Centre Catalan Genève -->
+          <div class="col">
+            <div class="card mb-3 h-100">
+              <img
+                src="./assets/portfolio/centre-catalan.png"
+                class="card-img-top"
+                alt="Centre Catalan de Genève"
+              />
+              <div class="card-body">
+                <h4 class="card-title">Centre Catalan de Genève</h4>
+                <p class="card-text lead">
+                  Ariadna Roig Monturiol<br />Marta Dados-Ribeiro
+                </p>
+              </div>
+              <div class="card-footer bg-white">
+                <div class="btn-group">
+                  <a
+                    href="https://snxy88.axshare.com/home.html"
+                    class="btn btn-outline-danger"
+                    aria-current="page"
+                    ><i class="fa fa-sitemap"></i> Version 1</a
+                  >
+                  <a
+                    href="https://y59yib.axshare.com/home.html"
+                    class="btn btn-outline-danger"
+                    aria-current="page"
+                    ><i class="fa fa-sitemap"></i> Version 2</a
+                  >
+                </div>
+              </div>
+            </div>
+          </div>
+          <!-- Rencontre Gex -->
+          <div class="col">
+            <div class="card mb-3 h-100">
+              <img
+                src="./assets/portfolio/rencontre-pays-gex.png"
+                class="card-img-top"
+                alt="Partir à la rencontre du Pays de Gex"
+              />
+              <div class="card-body">
+                <h4 class="card-title">Partir à la rencontre du Pays de Gex</h4>
+                <p class="card-text lead">
+                  Anne-Lise Bouscail-Hardy<br />Florent Dupertuis
+                </p>
+              </div>
+              <div class="card-footer bg-white">
+                <div class="btn-group">
+                  <a
+                    href="https://c8r8k6.axshare.com/#id=4gjde3&p=page_d_accueil"
+                    class="btn btn-outline-danger"
+                    aria-current="page"
+                    ><i class="fa fa-sitemap"></i> Version 1</a
+                  >
+                  <a
+                    href="https://9j5rlp.axshare.com/#id=4gjde3&p=page_d_accueil"
+                    class="btn btn-outline-danger"
+                    aria-current="page"
+                    ><i class="fa fa-sitemap"></i> Version 2</a
+                  >
+                </div>
+              </div>
+            </div>
+          </div>
+          <!-- Etudier former distance -->
+          <div class="col">
+            <div class="card mb-3 h-100">
+              <img
+                src="./assets/portfolio/etudier-former-distance.png"
+                class="card-img-top"
+                alt="Étudier et se former à distance"
+              />
+              <div class="card-body">
+                <h4 class="card-title">Étudier et se former à distance</h4>
+                <p class="card-text lead">Marie Guillon<br />Tiffany Nguyen</p>
+              </div>
+              <div class="card-footer bg-white">
+                <div class="btn-group">
+                  <a
+                    href="https://b4s2a2.axshare.com/#id=n25evj&p=accueil"
+                    class="btn btn-outline-danger"
+                    aria-current="page"
+                    ><i class="fa fa-sitemap"></i> Version 1</a
+                  >
+                  <a
+                    href="https://andsfu.axshare.com/#id=n25evj&p=accueil"
+                    class="btn btn-outline-danger"
+                    aria-current="page"
+                    ><i class="fa fa-sitemap"></i> Version 2</a
+                  >
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <!-- Prototype mobile -->
+      <section class="mt-5">
+        <h3>Prototype mobile</h3>
+        <p>
+          Les étudiant-es ont créé un prototype mobile sur un sujet de leur
+          choix, en
+          <em>low-fi</em> ou <em>high-fi</em> et avec la technique de leur
+          préférence. Ils ont ensuite enregistré l'utilisation du prototype pour
+          montrer les fonctionnalités interactives.
+        </p>
+
+        <div class="lead list-group">
+          <a
+            href="http://tecfaetu.unige.ch/etu-maltt/aegir/bouscai8/ergo/ergo-maquette-low-fi-v2.mp4"
+            class="list-group-item list-group-item-action"
+            ><i class="fas fa-video"></i> Vidéo utilisation du prototype mobile
+            de Anne-Lise Anne-Lise Bouscail-Hardy</a
+          >
+          <a
+            href="http://tecfaetu.unige.ch/etu-maltt/aegir/dadosri3/ergo-2/prototype/prototype_mobile.mp4"
+            class="list-group-item list-group-item-action"
+            ><i class="fas fa-video"></i> Vidéo utilisation du prototype mobile
+            de Marta Dados-Ribeiro</a
+          >
+          <a
+            href="http://tecfaetu.unige.ch/etu-maltt/aegir/guillon3/ergo/prototype_mobile_V2/"
+            class="list-group-item list-group-item-action"
+            ><i class="fas fa-video"></i> Vidéo utilisation du prototype mobile
+            de Marie Guillon</a
+          >
+          <a
+            href="http://tecfaetu.unige.ch/etu-maltt/aegir/nguyeti7/ergo-2/maquette-v2.mp4"
+            class="list-group-item list-group-item-action"
+            ><i class="fas fa-video"></i> Vidéo utilisation du prototype mobile
+            de Tiffany Nguyen</a
+          >
+          <a
+            href="http://tecfaetu.unige.ch/etu-maltt/aegir/deschac3/ergo-2/applifiorecompanionADV2"
+            class="list-group-item list-group-item-action"
+            ><i class="fas fa-video"></i> Vidéo utilisation du prototype mobile
+            de Arthur Deschamps</a
+          >
+          <a
+            href="http://tecfaetu.unige.ch/etu-maltt/aegir/dupertf9/ergo-2/prototype-mobile/jeremie_v2.mp4"
+            class="list-group-item list-group-item-action"
+            ><i class="fas fa-video"></i> Vidéo utilisation du prototype mobile
+            de Florent Dupertuis</a
+          >
+          <a
+            href="http://tecfaetu.unige.ch/etu-maltt/aegir/roigmon7/ergo-2/prototype_v2.mp4"
+            class="list-group-item list-group-item-action"
+            ><i class="fas fa-video"></i> Vidéo utilisation du prototype mobile
+            de Ariadna Roig Monturiol</a
+          >
+        </div>
+      </section>
+
+      <!-- Test A/B -->
+      <section class="mt-5">
+        <h3>Test A/B avec données fictives</h3>
+        <p>
+          Les étudiant-es ont proposé un protocole de passation pour un test A/B
+          avec deux variantes d'un site ou application de leur choix et une
+          mesure d'intérêt pour déterminer la meilleure version à garder. Sur la
+          base de la proposition, les étudiant-es ont obtenu un jeu de données
+          fictif, afin d'effectuer un test statistique pour départager les deux
+          versions.
+        </p>
+        <div class="lead list-group">
+          <a
+            href="./assets/portfolio/test-ab-florent.pdf"
+            class="list-group-item list-group-item-action"
+            ><i class="fa fa-file-pdf"></i> Rapport du Test A/B de Florent
+            Dupertuis</a
+          >
+          <a
+            href="./assets/portfolio/test-ab-anne-lise.pdf"
+            class="list-group-item list-group-item-action"
+            ><i class="fa fa-file-pdf"></i> Rapport du Test A/B de Anne-Lise
+            Bouscail-Hardy</a
+          >
+          <a
+            href="./assets/portfolio/test-ab-ariadna.pdf"
+            class="list-group-item list-group-item-action"
+            ><i class="fa fa-file-pdf"></i> Rapport du Test A/B de Ariadna Roig
+            Monturiol</a
+          >
+          <a
+            href="./assets/portfolio/test-ab-marie.pdf"
+            class="list-group-item list-group-item-action"
+            ><i class="fa fa-file-pdf"></i> Rapport du Test A/B de Marie
+            Guillon</a
+          >
+        </div>
+      </section>
     </div>
 
     <footer class="bg-dark text-white mt-5 mb-0 py-5">
