--- a/portfolio.html
+++ b/portfolio.html
@@ -120,13 +120,13 @@
                 <div class="btn-group">
                   <a
                     href="https://snxy88.axshare.com/home.html"
-                    class="btn btn-outline-danger"
+                    class="btn btn-outline-danger btn-lg"
                     aria-current="page"
                     ><i class="fa fa-sitemap"></i> Version 1</a
                   >
                   <a
                     href="https://y59yib.axshare.com/home.html"
-                    class="btn btn-outline-danger"
+                    class="btn btn-outline-danger btn-lg"
                     aria-current="page"
                     ><i class="fa fa-sitemap"></i> Version 2</a
                   >
@@ -152,13 +152,13 @@
                 <div class="btn-group">
                   <a
                     href="https://c8r8k6.axshare.com/#id=4gjde3&p=page_d_accueil"
-                    class="btn btn-outline-danger"
+                    class="btn btn-outline-danger btn-lg"
                     aria-current="page"
                     ><i class="fa fa-sitemap"></i> Version 1</a
                   >
                   <a
                     href="https://9j5rlp.axshare.com/#id=4gjde3&p=page_d_accueil"
-                    class="btn btn-outline-danger"
+                    class="btn btn-outline-danger btn-lg"
                     aria-current="page"
                     ><i class="fa fa-sitemap"></i> Version 2</a
                   >
@@ -182,13 +182,13 @@
                 <div class="btn-group">
                   <a
                     href="https://b4s2a2.axshare.com/#id=n25evj&p=accueil"
-                    class="btn btn-outline-danger"
+                    class="btn btn-outline-danger btn-lg"
                     aria-current="page"
                     ><i class="fa fa-sitemap"></i> Version 1</a
                   >
                   <a
                     href="https://andsfu.axshare.com/#id=n25evj&p=accueil"
-                    class="btn btn-outline-danger"
+                    class="btn btn-outline-danger btn-lg"
                     aria-current="page"
                     ><i class="fa fa-sitemap"></i> Version 2</a
                   >
