--- a/portfolio.html
+++ b/portfolio.html
@@ -95,8 +95,8 @@
           Le projet principal du cours consiste dans un travail en binôme divisé
           en trois étapes : (i) conception d'une première version d'une maquette
           interactive suite à la récolte d'information pendant le cours ERGO I
-          (e.g., analyse des besoins, trie de cartes, ...) ; (2) planification,
-          passation et analyse de résultat d'un test utilisateur ; et (3)
+          (e.g., analyse des besoins, trie de cartes, ...) ; (ii) planification,
+          passation et analyse de résultat d'un test utilisateur ; et (iii)
           conception d'une deuxième version de la maquette interactive suite aux
           retours du test utilisateur.
         </p>
